# ROSS

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  main.py  motor_test.py  pyproject.toml  test.py  uart_comms_test.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Agents/: robot.py  swarm.py
Environment/: points_and_plane.py
dev/: calibrate.py  calibration.yaml
develop/: cv_distance.py  distance_calibration.py
firmware/: load_env.py  platformio.ini
firmware/src/: camera.cpp  camera.h  config.h  imu.cpp  imu.h  main.cpp  motors.h
notebooks/: 0.1-jaehho-sim.py  3Dslam.py  README.md  ble_distance.ino  checkerboard_calibration.py  midas3d.py  midasroom-detection.py  midasroom.py  multiface-slam.py  object-detection-slam.py  open3dslam.py  orbslam.py  rotate-orbslam.py  simulate.ipynb  slamy.py  view3d.py
notebooks/models-on-pi/: midasroom-detection-on-pi-cam.py  midasroom-detection-on-pi.py
ross/: __main__.py  cli.py  config.py  flash.py  fuel_gauge.py  serial_teleop.py  serial_test.py  slam.py  teleop.py
ross/commands/: flash.py  fuel.py  serial.py  slam.py  teleop.py
ross/drivers/: fuel_gauge.py  gpio.py
ross/net/: discovery.py  robot.py
ross/slam/: __init__.py  display.py  extractor.py  generate_test_video.py  imu.py  io.py  main.py  pipeline.py  pointmap.py  reconstruct.py  sync_imu_video.py  vision.py
sanjay-test/: feature_matching.py  optical_flow.py
sanjay-test/panorama-3D-reconstruction/: capture.py  depth.py  reconstruct.py  visualize.py
sanjay-test/panorama-3D-reconstruction/output/: scene_360.ply  scene_mesh.ply
scripts/: main.py  run_simulation.py  test.py  testing_intersection_stupid.py
simulation/: simulation.py
src/: __init__.py  plots.py
src/ross/agents/: message.py  robot.py  swarm.py
src/ross/behaviors/: voronoi_balance.py
src/ross/core/: environment.py  robot.py  simulator.py  swarm.py
src/ross/utils/: v.py  voronoi.py
testing-m/: anchor-slam.py  midasroom.py  object-detection-slam.py  slamy.py
